# can_bus_simulator

./: CMakeLists.txt  README.md
docs/: architecture.md  testing.md  walkthrough.md
include/: can.h  dashboard.h  dbc.h  ecu.h  logger.h  menu.h  obd2.h  utils.h
src/: brake_ecu.c  can.c  dashboard.c  dbc.c  engine_ecu.c  logger.c  main.c  menu.c  obd2.c  utils.c
tests/: test_can.c  unity_lite.h
